--- a/APIREST/pubspec.yaml
+++ b/APIREST/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   http: ^1.1.0
+  carousel_slider: ^4.2.1
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
